--- a/about.css
+++ b/about.css
@@ -24,7 +24,7 @@
     display: none;
   }
 
-  .nav-mobile li {
+  .nav-mobile2 li {
     list-style: none;
     font-family: "Inter", "Times New Roman", Times, serif;
     font-size: 2rem;
@@ -33,14 +33,14 @@
     padding-bottom: 10px;
   }
 
-  .nav-mobile {
+  .nav-mobile2 {
     display: flex;
     position: fixed;
     left: -100%;
     top: 0;
     gap: 2rem;
     flex-direction: column;
-    background-color: #3c3a39;
+    background-color: #684e41;
     width: 100%;
     height: 755px;
     padding: 4rem 1rem;
@@ -50,15 +50,15 @@
     margin-top: 10px;
   }
 
-  .nav-mobile.active {
+  .nav-mobile2.active {
     left: 0;
   }
 
-  .link {
+  .links {
     margin: 16px 0;
   }
 
-  .nav-mobile a {
+  .nav-mobile2 a {
     color: #fff5e1;
     text-decoration: none;
     font-family: "Inter", sans-serif;
@@ -67,7 +67,7 @@
     padding-left: 20px;
   }
 
-  .nav-mobile li {
+  .nav-mobile2 li {
     list-style: none;
     font-family: "Inter", "Times New Roman", Times, serif;
     font-size: 2rem;
@@ -85,6 +85,8 @@
     color: #67798e;
     margin-top: 30px;
     margin-left: 30px;
+    position: absolute;
+
   }
 
   .lines {
@@ -93,7 +95,7 @@
     height: 3px;
     margin: 5px 0;
     transition: all 0.5s ease;
-    background-color: #67798e;
+    background-color: black
   }
   .hamburger.active .lines:nth-child(2) {
     opacity: 0;
@@ -134,6 +136,8 @@
     color: red;
     font-size: 22px;
     text-align: center;
+    padding-top: 60px;
+    font-family: "Lato", sans-serif;
   }
 
   .tittle h1 {
@@ -142,8 +146,8 @@
     font-family: "Lato", sans-serif;
     font-weight: 900;
     text-align: center;
-    width: 95vw;
     margin-bottom: 30px;
+    padding-top: 10px;
   }
 
   .details {
@@ -154,6 +158,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
   }
 
   .details-desktop {
@@ -164,6 +169,7 @@
     padding-top: 10px;
     font-size: 19px;
     font-family: "Lato", sans-serif;
+    font-weight: 500;
     text-align: center;
   }
 
@@ -278,11 +284,12 @@
     font-family: "Lato", sans-serif;
     padding-bottom: 5px;
     margin-top: 50px;
+    width: 95%;
   }
 
   .seepast p {
     font-family: "Lato", sans-serif;
-    font-size: 12px;
+    font-size: 16px;
     text-align: center;
     padding-bottom: 5px;
     font-weight: 700px;
@@ -348,18 +355,18 @@
 
   .past2 p {
     font-family: "Lato", sans-serif;
-    color: white;
+    color: #D3D3D3;
   }
 
   .row h4 {
-    color: white;
+    color: #D3D3D3;
   }
 
   .sponsors h4 {
-    color: white;
+    color: #D3D3D3;
     font-family: "Lato", sans-serif;
     padding-bottom: 10px;
-    padding-top: 30px;
+    padding-top: 35px;
   }
 
   .sponsors hr {
@@ -382,7 +389,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 10px;
-    color: white;
+    color:#D3D3D3;
   }
 
   .companies p {
@@ -410,7 +417,7 @@
 
   footer {
     display: flex;
-    height: 10rem;
+    height: 9rem;
     list-style: none;
     width: 100%;
     background-color: white;
@@ -447,12 +454,15 @@
 
   .foot-right .plast {
     font-family: "Lato", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     padding-top: 10px;
   }
 }
 
 @media only screen and (min-width: 768px) {
+body {
+  margin: 0;
+}
   header {
     display: flex;
     justify-content: center;
@@ -468,7 +478,7 @@
     display: none;
   }
 
-  .nav-mobile {
+  .nav-mobile2 {
     display: none;
     visibility: hidden;
   }
@@ -477,7 +487,7 @@
     justify-content: center;
     align-items: center;
     list-style: none;
-    gap: 30px;
+    gap: 20px;
     position: relative;
     left: 300px;
   }
@@ -487,11 +497,15 @@
     justify-content: space-between;
   }
 
+  .nav-desktop .abt a {
+    color: red;
+  }
+
   .nav-desktop a {
     color: black;
     text-decoration: none;
     font-family: "Lato", sans-serif;
-    font-size: 22px;
+    font-size: 20px;
   }
 
   .nav-desktop a:hover {
@@ -565,8 +579,9 @@
     width: 80%;
     color: red;
     font-size: 38px;
-    font-family: "Lato", sans-serif;
-    font-weight: 900;
+    font-family: "lato", sans-serif;
+    font-style: normal;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 30px;
   }
@@ -583,6 +598,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
   }
 
   .details-desktop p {
@@ -737,6 +753,10 @@
     height: 10rem;
   }
 
+  .past1:hover {
+    border: 2px solid blue;
+  }
+
   .past1 h2 {
     font-family: "Lato", sans-serif;
     color: white;
@@ -745,6 +765,7 @@
   .past1 p {
     font-family: "Lato", sans-serif;
     color: white;
+    padding-left: 10px;
   }
 
   .past2 {
@@ -761,6 +782,10 @@
     background-position: center;
     margin: auto;
     height: 10rem;
+  }
+
+  .past2:hover {
+    border: 2px solid blue;
   }
 
   .past2 h2 {
