Corrected linters errors

--- a/about.css
+++ b/about.css
@@ -303,8 +303,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image:
-      linear-gradient(
+    background-image: linear-gradient(
         rgba(200, 0, 0, 0.7),
         rgba(220, 0, 0, 0.8)
       ),
@@ -330,8 +329,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image:
-      linear-gradient(
+    background-image: linear-gradient(
         rgba(200, 0, 0, 0.7),
         rgba(220, 0, 0, 0.8)
       ),
@@ -735,8 +733,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image:
-      linear-gradient(
+    background-image: linear-gradient(
         rgba(200, 0, 0, 0.7),
         rgba(220, 0, 0, 0.8)
       ),
@@ -767,8 +764,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image:
-      linear-gradient(
+    background-image: linear-gradient(
         rgba(200, 0, 0, 0.7),
         rgba(220, 0, 0, 0.8)
       ),
