--- a/style.css
+++ b/style.css
@@ -692,6 +692,7 @@
     padding-top: 30px;
     font-size: 15px;
     font-family: "Lato", sans-serif;
+    font-style: normal;
     font-weight: 400;
     width: 70%;
   }
